--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,9 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       - run:
+          name: Checking chrome version
+          command: chrome --version
+      - run:
           name: Running tests
           command: mvn clean test
       - store_test_results:
