--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <selenide.version>5.24.4</selenide.version>
         <testng.version>6.14.3</testng.version>
         <faker.version>1.0.2</faker.version>
+        <aspectjweaver.version>1.9.6</aspectjweaver.version>
+        <allure.version>2.13.9</allure.version>
+        <io.qameta.allure.version>2.10.0</io.qameta.allure.version>
     </properties>
 
     <dependencies>
@@ -38,6 +41,46 @@
             <version>${faker.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectjweaver.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>${allure.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-selenide -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-selenide</artifactId>
+            <version>${allure.version}</version>
+        </dependency>
+
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <configuration>
+                    <argLine>
+                        -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectjweaver.version}/aspectjweaver-${aspectjweaver.version}.jar -Xmx256m
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>${io.qameta.allure.version}</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
