--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,3 @@
-qase.url=<INPUT HERE>
-qase.user=<INPUT HERE>
-qase.pass=<INPUT HERE>
+qase.url=https://app.qase.io/
+qase.user=maximus200064@mail.ru
+qase.pass=testPassMax1
