--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,35 @@
         <aspectjweaver.version>1.9.6</aspectjweaver.version>
         <allure.version>2.13.9</allure.version>
         <io.qameta.allure.version>2.10.0</io.qameta.allure.version>
+        <restassured.version>4.1.0</restassured.version>
+        <lombok.version>1.18.22</lombok.version>
+        <gson.version>2.8.9</gson.version>
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${restassured.version}</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.codeborne/selenide -->
         <dependency>
             <groupId>com.codeborne</groupId>
